// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component snapshot testing renders without data 1`] = `
<View>
  <View
    animated={true}
    defaultIndex={-1}
    defaultValue="Please select..."
    disabled={false}
    dropdownStyle={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderWidth": 1,
          "height": 106.5,
          "marginBottom": 5,
          "marginLeft": -30,
          "marginTop": 19.61764705882353,
          "width": 632.1428571428571,
        },
        undefined,
      ]
    }
    dropdownTextHighlightStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    dropdownTextStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    keyboardShouldPersistTaps="never"
    onDropdownWillHide={[Function]}
    onDropdownWillShow={[Function]}
    options={
      Array [
        0,
        1,
        2,
      ]
    }
    renderRow={[Function]}
    renderSeparator={[Function]}
    scrollEnabled={true}
    showsVerticalScrollIndicator={true}
    style={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 78.47058823529412,
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "width": 642.8571428571429,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#666666",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 25.142857142857142,
              },
              undefined,
            ]
          }
        />
        <Image
          resizeMode="contain"
          style={
            Object {
              "alignSelf": "flex-end",
              "height": 29.426470588235293,
              "marginBottom": 3,
              "width": 27.857142857142858,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Component snapshot testing renders without data 2`] = `
<View>
  <View
    animated={true}
    defaultIndex={-1}
    defaultValue="Please select..."
    disabled={false}
    dropdownStyle={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderWidth": 1,
          "height": 177.5,
          "marginBottom": 5,
          "marginLeft": -30,
          "marginTop": 19.61764705882353,
          "width": 632.1428571428571,
        },
        undefined,
      ]
    }
    dropdownTextHighlightStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    dropdownTextStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    keyboardShouldPersistTaps="never"
    onDropdownWillHide={[Function]}
    onDropdownWillShow={[Function]}
    options={
      Array [
        0,
        1,
        2,
        3,
        4,
      ]
    }
    renderRow={[Function]}
    renderSeparator={[Function]}
    scrollEnabled={true}
    showsVerticalScrollIndicator={true}
    style={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 78.47058823529412,
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "width": 642.8571428571429,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#666666",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 25.142857142857142,
              },
              undefined,
            ]
          }
        />
        <Image
          resizeMode="contain"
          style={
            Object {
              "alignSelf": "flex-end",
              "height": 29.426470588235293,
              "marginBottom": 3,
              "width": 27.857142857142858,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Component snapshot testing renders without data 3`] = `
<View>
  <View
    animated={true}
    defaultIndex={-1}
    defaultValue="Please select..."
    disabled={false}
    dropdownStyle={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderWidth": 1,
          "height": 177.5,
          "marginBottom": 5,
          "marginLeft": -30,
          "marginTop": 19.61764705882353,
          "width": 632.1428571428571,
        },
        undefined,
      ]
    }
    dropdownTextHighlightStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    dropdownTextStyle={
      Object {
        "color": "#666666",
        "fontFamily": "Quicksand-Medium",
        "fontSize": 25.142857142857142,
      }
    }
    keyboardShouldPersistTaps="never"
    onDropdownWillHide={[Function]}
    onDropdownWillShow={[Function]}
    options={
      Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ]
    }
    renderRow={[Function]}
    renderSeparator={[Function]}
    scrollEnabled={true}
    showsVerticalScrollIndicator={true}
    style={
      Array [
        Object {
          "borderColor": "#bdbdbd",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 78.47058823529412,
          "justifyContent": "center",
          "paddingHorizontal": 15,
          "width": 642.8571428571429,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#666666",
                "fontFamily": "Quicksand-Medium",
                "fontSize": 25.142857142857142,
              },
              undefined,
            ]
          }
        />
        <Image
          resizeMode="contain"
          style={
            Object {
              "alignSelf": "flex-end",
              "height": 29.426470588235293,
              "marginBottom": 3,
              "width": 27.857142857142858,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
